--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,16 @@
         <jackson-datatype-hibernate4.version>2.7.9</jackson-datatype-hibernate4.version>
         <javaee-api.version>6.0</javaee-api.version>
         <aspectj-maven-plugin.version>1.9</aspectj-maven-plugin.version>
-        <aspectjrt.version>1.8.9</aspectjrt.version><!-- same as aspectjtools within aspectj-maven-plugin -->
-        <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version><!-- java8 won't work with version (2.5.1, 3.7.0]  -->
+        <!-- same as aspectjtools within aspectj-maven-plugin -->
+        <aspectjrt.version>1.8.9</aspectjrt.version>
+        <!--
+            java8 won't work with version (2.5.1, 3.7.0]
+            I guess it determines also the spring-instrument-tomcat version.
+        -->
+        <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
         <run-tomcat-embedded>provided</run-tomcat-embedded>
         <run-jetty>provided</run-jetty>
-        <source.version>1.7</source.version>
+        <source.version>1.8</source.version>
         <commons.io>2.4</commons.io>
         <mysql.connector>5.1.38</mysql.connector>
         <metadata.extractor>2.6.2</metadata.extractor>
