--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
     <properties>
         <tomcat.version>7.0.64</tomcat.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <springframework.version>4.2.9.RELEASE</springframework.version>
+        <!-- same version for spring-instrument-tomcat-*.jar -->
+        <springframework.version>4.3.13.RELEASE</springframework.version>
         <spring-security.version>3.2.10.RELEASE</spring-security.version>
         <spring-data.version>1.6.1.RELEASE</spring-data.version>
         <hibernate.version>4.3.5.Final</hibernate.version>
