--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,46 +5,49 @@
          version="3.0">
     <display-name>exifweb</display-name>
 
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>
-            <!--classpath*:/org/springframework/jdbc/support/sql-error-codes.xml-->
-            classpath:spring/root-*.xml,
-        </param-value>
-    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>-->
+            <!--&lt;!&ndash;classpath*:/org/springframework/jdbc/support/sql-error-codes.xml&ndash;&gt;-->
+            <!--classpath:spring/root-*.xml,-->
+        <!--</param-value>-->
+    <!--</context-param>-->
 
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <async-supported>true</async-supported>
-    </filter>
+    <!--<filter>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+        <!--<async-supported>true</async-supported>-->
+    <!--</filter>-->
 
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>ASYNC</dispatcher>
-    </filter-mapping>
+    <!--<filter-mapping>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+        <!--<dispatcher>REQUEST</dispatcher>-->
+        <!--<dispatcher>ASYNC</dispatcher>-->
+    <!--</filter-mapping>-->
 
-    <listener>
-        <listener-class>
-            image.exifweb.util.frameworks.spring.web.context.ContextLoaderListenerEx
-        </listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>-->
+            <!--image.exifweb.util.frameworks.spring.web.context.ContextLoaderListenerEx-->
+        <!--</listener-class>-->
+    <!--</listener>-->
 
-    <servlet>
-        <servlet-name>dispatcher</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>9</load-on-startup>
-        <async-supported>true</async-supported>
-    </servlet>
+    <!--<servlet>-->
+        <!--<servlet-name>dispatcher</servlet-name>-->
+        <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+        <!--<load-on-startup>9</load-on-startup>-->
+        <!--<async-supported>true</async-supported>-->
+    <!--</servlet>-->
 
-    <!-- map all requests for /app/** to the dispatcher servlet -->
-    <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/app/*</url-pattern>
-    </servlet-mapping>
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>dispatcher</servlet-name>-->
+        <!--<url-pattern>/app/*</url-pattern>-->
+    <!--</servlet-mapping>-->
 
+    <!--
+        No way to programmatically set the global session timeout.
+        http://www.baeldung.com/servlet-session-timeout
+    -->
     <session-config>
         <session-timeout>120</session-timeout>
     </session-config>
@@ -54,10 +57,10 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
-    <resource-ref>
-        <res-ref-name>exifweb</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
+    <!--<resource-ref>-->
+        <!--<res-ref-name>exifweb</res-ref-name>-->
+        <!--<res-type>javax.sql.DataSource</res-type>-->
+        <!--<res-auth>Container</res-auth>-->
+    <!--</resource-ref>-->
 
 </web-app>
