--- a/exifweb/src/main/resources/exifweb.properties
+++ b/exifweb/src/main/resources/exifweb.properties
@@ -29,3 +29,6 @@ httpd-admin.base=http://127.0.0.1:82/
 darkstat.port=667
 darkstat.niceness=19
 system.default.niceness=-3
+
+# sql database
+jndi.name=exifweb
