--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <!--</dependency>-->
 
             <dependency>
+                <groupId>exifweb</groupId>
+                <artifactId>cdm</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.jolbox</groupId>
                 <artifactId>bonecp</artifactId>
                 <version>0.8.0.RELEASE</version>
