--- a/cdm/pom.xml
+++ b/cdm/pom.xml
@@ -18,6 +18,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>storage-entities</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
