--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
+                <artifactId>storage-entities</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
                 <artifactId>cdm</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -112,6 +118,11 @@
                 <version>${commons.io}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
@@ -171,6 +182,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
                 <version>${springframework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
             </dependency>
 
             <!-- depends on hibernate-core -->
@@ -437,6 +454,7 @@
     </build>
 
     <modules>
+        <module>storage-entities</module>
         <module>cdm</module>
         <module>storage-api</module>
         <module>storage-sql</module>
