--- a/exifweb/pom.xml
+++ b/exifweb/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
 
         <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>storage-sql</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.jolbox</groupId>
             <artifactId>bonecp</artifactId>
             <scope>${run-jetty}</scope>
@@ -235,14 +240,6 @@
     <build>
         <defaultGoal>install</defaultGoal>
         <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${source.version}</source>
-                    <target>${source.version}</target>
-                </configuration>
-            </plugin>
-
             <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -321,13 +318,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <configuration>
-                    <verbose>false</verbose>
-                    <showWeaveInfo>false</showWeaveInfo>
-                    <privateScope>true</privateScope>
-                    <source>${source.version}</source>
-                    <target>${source.version}</target>
-                    <complianceLevel>${source.version}</complianceLevel>
+                <configuration combine.self="append">
                     <aspectLibraries>
                         <aspectLibrary>
                             <groupId>org.springframework</groupId>
@@ -339,15 +330,6 @@
                         </aspectLibrary>
                     </aspectLibraries>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
         </plugins>
