--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             </dependency>
 
             <dependency>
+                <groupId>exifweb</groupId>
+                <artifactId>storage-sql</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.jolbox</groupId>
                 <artifactId>bonecp</artifactId>
                 <version>0.8.0.RELEASE</version>
@@ -168,6 +174,16 @@
                 <version>${javax.inject}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
@@ -428,16 +444,6 @@
                         <source>${source.version}</source>
                         <target>${source.version}</target>
                         <complianceLevel>${source.version}</complianceLevel>
-                        <aspectLibraries>
-                            <aspectLibrary>
-                                <groupId>org.springframework</groupId>
-                                <artifactId>spring-aspects</artifactId>
-                            </aspectLibrary>
-                            <aspectLibrary>
-                                <groupId>org.springframework.security</groupId>
-                                <artifactId>spring-security-aspects</artifactId>
-                            </aspectLibrary>
-                        </aspectLibraries>
                     </configuration>
                     <executions>
                         <execution>
@@ -451,6 +457,12 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
     <modules>
