--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
-                <artifactId>storage-sql</artifactId>
+                <artifactId>storage-impl-hbm</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -94,6 +94,12 @@
                 <groupId>com.jolbox</groupId>
                 <artifactId>bonecp</artifactId>
                 <version>0.8.0.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>1.9.3</version>
             </dependency>
 
             <dependency>
@@ -108,6 +114,10 @@
                     <exclusion>
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-beanutils</groupId>
+                        <artifactId>commons-beanutils</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -469,7 +479,7 @@
         <module>storage-entities</module>
         <module>cdm</module>
         <module>storage-api</module>
-        <module>storage-sql</module>
+        <module>storage-impl-hbm</module>
         <module>exifweb</module>
     </modules>
 </project>
