--- a/storage-impl-hbm/pom.xml
+++ b/storage-impl-hbm/pom.xml
@@ -9,9 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>exifweb</groupId>
-    <artifactId>storage-sql</artifactId>
+    <artifactId>storage-impl-hbm</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>storage-sql</name>
+    <name>storage-impl-hbm</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
