--- a/photos/pom.xml
+++ b/photos/pom.xml
@@ -9,20 +9,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>exifweb</groupId>
-    <artifactId>cdm</artifactId>
+    <artifactId>photos</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>cdm</name>
+    <name>photos</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-        <dependency>
-            <groupId>exifweb</groupId>
-            <artifactId>storage-entities</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
