--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -31,6 +31,11 @@
         </dependency>
 
         <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>photos</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.jolbox</groupId>
             <artifactId>bonecp</artifactId>
             <scope>${run-jetty}</scope>
