--- a/photos/pom.xml
+++ b/photos/pom.xml
@@ -94,5 +94,10 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>io.takari.junit</groupId>
+			<artifactId>takari-cpsuite</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
