--- a/pom.xml
+++ b/pom.xml
@@ -562,6 +562,16 @@
 		</plugins>
 	</build>
 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.20.1</version>
+			</plugin>
+		</plugins>
+	</reporting>
+
 	<modules>
 		<!-- cdm = common data model -->
 		<module>cdm</module>
