--- a/pom.xml
+++ b/pom.xml
@@ -366,7 +366,6 @@
 				<version>4.12</version>
 				<scope>test</scope>
 			</dependency>
-
 			<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
 			<dependency>
 				<groupId>org.hamcrest</groupId>
@@ -374,14 +373,12 @@
 				<version>1.3</version>
 				<scope>test</scope>
 			</dependency>
-
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
 				<version>${springframework.version}</version>
 				<scope>test</scope>
 			</dependency>
-
 			<!-- https://mvnrepository.com/artifact/io.takari.junit/takari-cpsuite -->
 			<dependency>
 				<groupId>io.takari.junit</groupId>
@@ -389,6 +386,12 @@
 				<version>1.2.7</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>org.exparity</groupId>
+                <artifactId>hamcrest-date</artifactId>
+                <version>2.0.4</version>
+                <scope>test</scope>
+            </dependency>
 
 		</dependencies>
 	</dependencyManagement>
@@ -414,7 +417,12 @@
 			<artifactId>takari-cpsuite</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.exparity</groupId>
+            <artifactId>hamcrest-date</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<pluginManagement>
