--- a/storage-api/pom.xml
+++ b/storage-api/pom.xml
@@ -13,4 +13,11 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>storage-api</name>
 	<url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+    </dependencies>
 </project>
