--- a/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource.properties
@@ -5,3 +5,8 @@ jdbc.userName=exifweb
 jdbc.password=exifweb
 jdbc.minimumIdle=1
 jdbc.maximumPoolSize=2
+
+ramdb.jdbc.driverClass=org.h2.Driver
+ramdb.jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
+ramdb.hibernate.dialect=org.hibernate.dialect.H2Dialect
+ramdb.hibernate.hbm2ddl.auto=update
