--- a/storage-impl-hbm/src/main/resources/hibernate.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate.properties
@@ -17,3 +17,6 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 # hibernate.id.new_generator_mappings=true
 # hibernate.current_session_context_class=jta
 # javax.persistence.validation.mode=
+
+ramdb.hibernate.dialect=org.hibernate.dialect.H2Dialect
+ramdb.hibernate.hbm2ddl.auto=update
