--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
+                <artifactId>storage-impl-hbm</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
                 <artifactId>photos</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -451,6 +459,19 @@
                         <source>${source.version}</source>
                         <target>${source.version}</target>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
 
                 <plugin>
